sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:3: error: not found: value vallgr
vallgr=getNombreValeurs()
^